fix display of spinner causing overflow on main gric

--- a/app/assets/stylesheets/application/components/grid.scss
+++ b/app/assets/stylesheets/application/components/grid.scss
@@ -4,6 +4,7 @@
   &--main {
     grid-column: 2 / 4;
     overflow-y: scroll;
+    width: 100%;
   }
 
   &--videos {
